# KUKA_app

./: .gitignore  README.md
cocktail_making/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
cocktail_making_pour_manual/data/: test1.txt  test2.txt
cocktail_making_pour_manual/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
contraction_theory/src/: CMakeLists.txt  MyLBRClient.cpp
discrete_and_rhythmic/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
draw_and_erase/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
imitation_learning/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
maintain_posture_type1/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
maintain_posture_type2/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
polishing1/data/: polishing_data1.txt
polishing1/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
pour_different_position/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
print_joint_vals/: CMakeLists.txt  MyLBRClient.h
print_joint_vals/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
replay_joint_vals/src/: CMakeLists.txt  MyLBRApp.cpp  MyLBRClient.cpp  MyLBRClient.h
sequence_movements/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
singularity_demo0_failure/data/: singularity_test1.txt  singularity_test2.txt  singularity_test3.txt
singularity_demo0_failure/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
singularity_demo1/data/: singularity_test0.txt  singularity_test1.txt
singularity_demo1/src/: CMakeLists.txt  MyLBRClient.cpp
singularity_demo2/: singularity_test2.txt
singularity_demo2/data/: singularity_test2.txt  singularity_test3.txt
singularity_demo2/src/: CMakeLists.txt  MyLBRClient.cpp
singularity_demo3/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
singularity_inf/data/: sing_exp_18deg.txt  sing_exp_28deg.txt  sing_exp_9deg.txt  singularity_experiment.txt  singularity_inf.txt  singularity_inf2.txt
singularity_inf/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
singularity_multiple_poses/data/: weight_lifting.txt
singularity_multiple_poses/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
singularity_stretch/src/: CMakeLists.txt  MyLBRClient.cpp
task_imp_pos/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
task_imp_pos_and_orient/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
task_imp_pos_and_orient_advanced/src/: CMakeLists.txt
test_imit_learn_orient/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
test_imit_learn_orient_dis/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
test_imit_learn_orient_rhy/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
test_imit_learn_pos/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
test_kin_stiffness/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h  my_diff_jacobians.cpp  my_diff_jacobians.h
test_repeatability/data/: repeat_Kq0.txt  repeat_Kq6.txt  repeat_Kq6_Tp4_high.txt  repeat_Kq6_Tp8.txt  repeat_Kq6_Tp8_high.txt
test_repeatability/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
whip_task/src/: CMakeLists.txt  MyLBRClient.cpp  MyLBRClient.h
